--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
 
     <section class="main-header">
-        <img src="/Images/stallionlogo.PNG" alt="logo" class="companylogo">
+        <img src="Images/stallionlogo.PNG" alt="logo" class="companylogo">
         <h1 class="main-title">Stallion Landscaping and Flooring</h1>
         <p class="company-description">At Stallion Landscaping and Flooring, we take pride in every project we undertake. With a focus on serving Asheville and surrounding areas, our team is dedicated to delivering exceptional results. From landscaping to flooring, we treat each job with the utmost care and attention, ensuring that your space receives the highest level of craftsmanship.</p>
     </section>
