--- a/index.html
+++ b/index.html
@@ -47,55 +47,55 @@
         <div class="wavy-background"></div>
         <h2 class="section-title">Landscape Services in Asheville</h2>
         <div class="card">
-            <img src="/Images/cuttinggrass.jpeg" alt="Landscape Image 1" class="card-image">
+            <img src="Images/cuttinggrass.jpeg" alt="Landscape Image 1" class="card-image">
             <div class="card-overlay">
                 <h3 class="card-title">Lawncare and Maintenance</h3>
                 <p class="card-description">Our landscaping company offers professional lawn care and maintenance services. From mowing and trimming to landscape cleanups and tree care, we ensure your outdoor spaces stay beautiful and well-maintained. Trust us for expert care and a stunning landscape all year round.</p>
             </div>
         </div>
         <div class="card">
-            <img src="/Images/retainingwall.jpeg" alt="Landscape Image 2" class="card-image">
+            <img src="Images/retainingwall.jpeg" alt="Landscape Image 2" class="card-image">
             <div class="card-overlay">
                 <h3 class="card-title">Retaining Walls</h3>
                 <p class="card-description">Enhance your outdoor space with our professional retaining wall services. Our team of experts designs and builds stunning retaining walls that not only provide structural support but also add visual appeal to your landscape. Trust us to create beautiful and functional retaining walls that stand the test of time.</p>
             </div>
         </div>
         <div class="card">
-            <img src="/Images/fireplace.jpeg" alt="Landscape Image 3" class="card-image">
+            <img src="Images/fireplace.jpeg" alt="Landscape Image 3" class="card-image">
             <div class="card-overlay">
                 <h3 class="card-title">Fireplaces and Pits</h3>
                 <p class="card-description">Create a warm and inviting ambiance in your outdoor living area with our exceptional fireplace and fire pit services. Our skilled team specializes in designing and constructing custom fire features that bring comfort and style to your backyard.</p>
             </div>
         </div>
         <div class="card">
-            <img src="/Images/Pavers.jpeg" alt="Landscape Image 4" class="card-image">
+            <img src="Images/Pavers.jpeg" alt="Landscape Image 4" class="card-image">
             <div class="card-overlay">
                 <h3 class="card-title">Pavers</h3>
                 <p class="card-description">Transform your outdoor space with our stunning pavers. Enhance the beauty and functionality of your pathways, patios, and driveways with our high-quality paver installations. Experience exceptional durability and timeless elegance that will elevate the aesthetics of your home.</p>
             </div>
         </div>
         <div class="card">
-            <img src="/Images/flooringtwo.jpeg" alt="Landscape Image 5" class="card-image">
+            <img src="Images/flooringtwo.jpeg" alt="Landscape Image 5" class="card-image">
             <div class="card-overlay">
                 <h3 class="card-title">Vinyl Flooring</h3>
                 <p class="card-description">Upgrade your floors with our premium vinyl flooring solutions. Experience the perfect combination of style, durability, and easy maintenance. Our wide range of vinyl flooring options offers stunning designs and superior performance, making it the ideal choice for any room in your home.</p>
             </div>
         </div>
         <div class="card">
-            <img src="/Images/carpeting.jpeg" alt="Landscape Image 6" class="card-image">
+            <img src="Images/carpeting.jpeg" alt="Landscape Image 6" class="card-image">
             <div class="card-overlay">
                 <h3 class="card-title">Carpeting</h3>
                 <p class="card-description">we provide personalized service and expert guidance to help you find the perfect carpeting solution that aligns with your unique style and preferences. Experience the unmatched beauty, durability, and softness of our carpets, as we strive to create an inviting and cozy ambiance that enhances your living or working environment.</p>
             </div>
         </div>
         <div class="card">
-            <img src="/Images/flooring one.jpeg" alt="Landscape Image 7" class="card-image">
+            <img src="Images/flooring one.jpeg" alt="Landscape Image 7" class="card-image">
             <div class="card-overlay">
                 <h3 class="card-title">Hardwood Flooring</h3>
                 <p class="card-description">From installation to refinishing, our skilled craftsmen ensure a seamless and long-lasting result. Experience the natural charm and long-lasting value of hardwood floors, meticulously crafted to transform your home or business into a stunning showcase of craftsmanship.</p>
             </div>
         </div><div class="card">
-            <img src="/Images/ceramic.jpeg" alt="Landscape Image 8" class="card-image">
+            <img src="Images/ceramic.jpeg" alt="Landscape Image 8" class="card-image">
             <div class="card-overlay">
                 <h3 class="card-title">Ceramic Tile</h3>
                 <p class="card-description">Enjoy the benefits of easy maintenance, exceptional durability, and the stunning visual appeal that ceramic tiles bring to your home or business. Elevate your space with our ceramic tile installation service and experience the perfect blend of elegance and practicality.</p>
